--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,83 @@
-# Comment
-aiohttp
-# anaconda-navigator
-anaconda-project
-astropy
-autopep8
-bitarray
-bkcharts
-boto3
-bottleneck
-brotlipy
-bs4
-comtypes
-conda-build
-conda-package-handling
-conda-repo-cli
-conda-token
-conda-verify
-cython
-cytoolz
-datashader
-distributed
-flake8
-flask-pymongo
-gensim
-glob2
-google-cloud-storage
-html5lib
-hvplot
-imagecodecs
-intake
-jdcal
-jupyter
-jupyterlab
-mkl-fft
-mkl-random
-mkl-service
-mock
-mongo
-munkres
-mypy-extensions
-navigator-updater
-nltk
-nose
-olefile
-openpyxl
-pep8
-pip-chill
-plotly
-psycopg2-binary
-pycurl
-pydocstyle
-pyhamcrest
-pyjwt
-pyodbc
-pyreadline
-pysocks
-pytest
-python-snappy
-rope
-scikit-image
-scikit-learn-intelex
-scrapy
-seaborn
-sip
-sortedcollections
-splinter
-spyder
-sqlalchemy
-statsmodels
-sympy
-tables
-tabulate
-tbb
-tensorflow
-unidecode
-webdriver-manager
-win-inet-pton
-win-unicode-console
-wincertstore
-xlrd
-xlsxwriter
-xlwings
-yapf
+aiohttp==3.8.1
+anaconda-navigator==2.3.2
+anaconda-project==0.11.1
+astropy==5.1
+autopep8==1.6.0
+bitarray==2.5.1
+bkcharts==0.2
+boto3==1.24.28
+bottleneck==1.3.5
+brotlipy==0.7.0
+bs4==0.0.1
+comtypes==1.1.10
+conda-build==3.22.0
+conda-repo-cli==1.0.20
+conda-token==0.4.0
+conda-verify==3.4.2
+cython==0.29.32
+cytoolz==0.11.0
+datashader==0.14.1
+distributed==2022.7.0
+flake8==3.9.2
+flask-pymongo==2.3.0
+gensim==4.1.2
+google-cloud-storage==1.43.0
+gunicorn==20.1.0
+html5lib==1.1
+hvplot==0.8.0
+imagecodecs==2021.8.26
+intake==0.6.5
+jdcal==1.4.1
+jupyter==1.0.0
+jupyterlab==3.4.4
+lz4==3.1.3
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+mock==4.0.3
+mongo==0.2.0
+munkres==1.1.4
+navigator-updater==0.3.0
+nltk==3.7
+nose==1.3.7
+olefile==0.46
+openpyxl==3.0.10
+pep8==1.7.1
+pip-chill==1.0.1
+plotly==5.9.0
+psycopg2-binary==2.9.3
+pycurl==7.45.1
+pydocstyle==6.1.1
+pyhamcrest==2.0.2
+pyjwt==2.4.0
+pyodbc==4.0.34
+pyreadline==2.1
+pysocks==1.7.1
+pytest==7.1.2
+python-snappy==0.6.0
+rope==0.22.0
+scikit-image==0.19.2
+scikit-learn-intelex==2021.20221004.171935
+scrapy==2.6.2
+seaborn==0.11.2
+sip==4.19.13
+sortedcollections==2.1.0
+splinter==0.18.1
+spyder==5.1.5
+sqlalchemy==1.4.39
+statsmodels==0.13.2
+sympy==1.10.1
+tables==3.6.1
+tabulate==0.8.10
+tbb==0.2
+tensorflow==2.10.0
+typed-ast==1.4.3
+unidecode==1.2.0
+webdriver-manager==3.8.2
+win-inet-pton==1.1.0
+win-unicode-console==0.5
+wincertstore==0.2
+xlrd==2.0.1
+xlsxwriter==3.0.3
+xlwings==0.27.15
+yapf==0.31.0
